# deck

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: appimage.yml  ci.yml  release.yml
ci/: build-appimage.sh
docs/: ADDING_MODES.md  ARCHITECTURE.md  FIELD_TESTING.md  STATUS.md
packaging/: 70-deck-sdr.rules
src/: audio.rs  bands.rs  config.rs  device.rs  doctor.rs  dsp.rs  freq.rs  main.rs  modes.rs  pipeline.rs  rec.rs  session.rs  sys.rs
src/gui/: icons.rs  misc.rs  mod.rs  modeview.rs  raster.rs  shot.rs  theme.rs  widgets.rs  world.rs
src/parse/: ais.rs  dsd.rs  ft8.rs  mod.rs  multimon.rs  sbs.rs
src/sim/: adsb.rs  ais.rs  ax25.rs  band.rs  baudot.rs  mod.rs  pocsag.rs  voice.rs
