[package]
name = "deck"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
description = "Handheld ham-radio RX machine for SDR cyberdecks: a fullscreen touch GUI that reads IQ from RTL-SDR/Airspy HF+, demodulates NFM/WFM/AM/SSB internally, and drives dsd-neo, multimon-ng, dump1090 & friends — with scanner, waterfall, spectrum, NR/NB/notch and a built-in signal simulator."
license = "MIT"
readme = "README.md"
keywords = ["sdr", "radio", "gui", "cyberdeck", "rtl-sdr"]
categories = ["multimedia", "visualization"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui_extras = "0.29"
libc = "0.2"
png = "0.17"
rustfft = "6.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

# keep local builds lean (target/ size matters on small decks too)
[profile.dev]
debug = false

[profile.dev.package."*"]
debug = false

[[bin]]
name = "deck"
path = "src/main.rs"
